# laboratorio_root

./: .gitignore  CMakeLists.txt  README.md  extra.cpp  main.cxx  particle.cpp  particle.cxx  particle.hpp  particletest.cxx  particletype.cpp  particletype.cxx  particletype.hpp  resonancetype.cxx  resonancetype.hpp  rootlogon.C
histograms/: .gitignore
macros/: .gitignore  analysis.cxx
source/: main.cxx  main_cxx.d  main_cxx_ACLiC_dict_rdict.pcm  memory_test.hpp  myMacro.cxx  myMacro_C.d  myMacro_C_ACLiC_dict_rdict.pcm  particle.cxx  particle.hpp  particle_cxx.d  particle_cxx_ACLiC_dict_rdict.pcm  particletype.cxx  particletype.hpp  particletype_cxx.d  particletype_cxx_ACLiC_dict_rdict.pcm  real_main.cxx  resonancetype.cxx  resonancetype.hpp  resonancetype_cxx.d  resonancetype_cxx_ACLiC_dict_rdict.pcm  rootlogon.C  testMacro.C  timer.hpp
source/test/: particletest.cxx
